# phosphorus

./: .gitignore  CHANGELOG.rst  README.rst  cookbook.toml  cookbook.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md  usage.md
docs/source/: conf.py  installation.rst
src/phosphorus/: TODO  __main__.py  _seven.py  _seven.pyi  main.py
src/phosphorus/commands/: base.py  build.py  check.py  install.py  lock.py  run.py
src/phosphorus/construction/: api.py  base.py  sdist.py  wheel.py
src/phosphorus/lib/: cli.py  constants.py  contributors.py  exceptions.py  licenses.py  markers.py  metadata.py  packages.py  parser.py  pypi.py  regex.py  requirements.py  resolver.py  run.py  subprocess.py  tags.py  term.py  type_defs.py  types.py  utils.py  uv_runner.py  versions.py  zipped_file.py
src/phosphorus/subcommands/: base.py  build.py  check.py  install.py  lock.py
tests/phosphorus/: test_main.py
tests/phosphorus/lib/: test_cli.py  test_markers.py  test_packages.py  test_versions.py
