[build-system]
requires = ["phosphorus>=0.1.0"]
build-backend = "phosphorus.construction.api"

[tool.black]
target-version = ["py38"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "E501",
    "TRY003",
]
src = ["src"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.isort]
combine-as-imports = true
forced-separate = ["tests"]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.phosphorus]
name = "phosphorus"
version = "./src/phosphorus/__version__.py"
python = "~=3.8"

authors = [
    {name = "Stephanos Kuma", email = "stephanos@kuma.ai"},
]
license = "LGPL-3.0+"

summary = "A dependency management and packaging tool"
keywords = ["dependency", "packaging", "build"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[tool.phosphorus.urls]
homepage = "https://phosphorus.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/phosphorus"
documentation = "https://phosphorus.readthedocs.io/en/stable/"

[tool.phosphorus.scripts]
p = "phosphorus.main:main"

[tool.phosphorus.dependencies.main]
tomli = {version = "~=2.0", marker = "python_version < '3.11'" }

[tool.phosphorus.dependencies.dev]
ipdb = "~=0.13"
ipython = "~=8.11"
pipdeptree = "~=2.5"

[tool.phosphorus.dependencies.lint]
black = "~=23.1"
mypy = "~=1.0"
ruff = "~=0.0"

[tool.phosphorus.dependencies.test]
pytest = "~=7.2"
pytest-cov = "~=4.0"

[tool.phosphorus.dependencies.docs]
sphinx = "~=6.1"
sphinx-rtd-theme = "~=1.2"
